--- a/index.html
+++ b/index.html
@@ -318,8 +318,10 @@
 			<br> Enter The Visitor Team <input
 			type="text" placeholder="Visitor Team"
 			style="text-transform: uppercase" maxlength="20" size="20"
-			id="visitorfootballteam" onkeypress="storefootballteams();"> <br> <a
-			href="football_sc_h.html">Football Scoring Page</a>
+			id="visitorfootballteam" onkeypress="storefootballteams();"> <br>
+			 <a href="football_sc_h.html">Football Scoring Page</a>
+			 <br>
+			  <a href="strikezone.html">STRIKEZONE</a>
 		<script type="text/javascript">
 			function storefootballteams()
 			{
