--- a/strikezone.html
+++ b/strikezone.html
@@ -5,16 +5,17 @@
 <title>STRIKE ZONE</title>
 </head>
 <body>
-	<svg width="640" height="480" xmlns="http://www.w3.org/2000/svg"
-		xmlns:svg="http://www.w3.org/2000/svg">
+	<svg width="640" height="960" xmlns="http://www.w3.org/2000/svg" xmlns:svg="http://www.w3.org/2000/svg">
  <!-- Created with SVG-edit - http://svg-edit.googlecode.com/ -->
  <g>
   <title>Layer 1</title>
-  <circle stroke="#000000" id="svg_1" r="220" cy="240" cx="320"
-			stroke-width="5" fill="#FF0000" />
-  <rect stroke="#000000" id="svg_2" height="225" width="141" y="132"
-			x="253" stroke-linecap="null" stroke-linejoin="null"
-			stroke-dasharray="null" stroke-width="5" fill="green" />
- </g>></svg>
+  <circle stroke="red" id="svg_1" r="220" cy="240" cx="320" stroke-width="5" fill="red"/>
+  <rect stroke="green" id="svg_2" height="225" width="141" y="130" x="250" 
+  	stroke-linecap="null" stroke-linejoin="null" stroke-dasharray="null" stroke-width="5" fill="green"/>
+  <circle id="svg_4" stroke="red" r="220" cy="715.43858" cx="320" stroke-width="5" fill="red"/>
+  <rect id="svg_3" stroke="green" height="225" width="141" y="614" x="250" 
+  	stroke-linecap="null" stroke-linejoin="null" stroke-dasharray="null" stroke-width="5" fill="green"/>
+ </g>
+</svg>
 </body>
 </html>
