--- a/strikezone.html
+++ b/strikezone.html
@@ -3,17 +3,25 @@
 <head>
 <meta charset="UTF-8">
 <title>STRIKE ZONE</title>
+<style type="text/css">
+#body {
+	background-color: lightgreen;
+}
+</style>
 </head>
-<body>
-	<svg width="640" height="960" xmlns="http://www.w3.org/2000/svg" xmlns:svg="http://www.w3.org/2000/svg">
+<body id="body">
+	<svg width="700" height="1400" xmlns="http://www.w3.org/2000/svg" xmlns:svg="http://www.w3.org/2000/svg">
  <!-- Created with SVG-edit - http://svg-edit.googlecode.com/ -->
  <g>
   <title>Layer 1</title>
-  <circle stroke="red" id="svg_1" r="220" cy="240" cx="320" stroke-width="5" fill="red"/>
-  <rect stroke="green" id="svg_2" height="225" width="141" y="130" x="250" 
+  <circle id="topcircle" stroke="red" id="svg_1" cx="352.5357" cy="343.05359" r="319.84973" stroke-width="5" fill="red"/>
+  
+  <rect id="toprect" stroke="green" id="svg_2" x="284.07143" y="210.39287" width="141" height="225"  
   	stroke-linecap="null" stroke-linejoin="null" stroke-dasharray="null" stroke-width="5" fill="green"/>
-  <circle id="svg_4" stroke="red" r="220" cy="715.43858" cx="320" stroke-width="5" fill="red"/>
-  <rect id="svg_3" stroke="green" height="225" width="141" y="614" x="250" 
+  	
+  <circle id="bottomcircle" stroke="red" cx="352.80358" cy="1046.27788" r="319.84973" stroke-width="5" fill="red"/>
+  
+  <rect id="bottomrect" stroke="green" x="281.13819" y="952.87559" width="141" height="225" 
   	stroke-linecap="null" stroke-linejoin="null" stroke-dasharray="null" stroke-width="5" fill="green"/>
  </g>
 </svg>
