--- a/strikezone.html
+++ b/strikezone.html
@@ -10,20 +10,17 @@
 </style>
 </head>
 <body id="body">
+<h1>help</h1>
 	<svg width="700" height="1400" xmlns="http://www.w3.org/2000/svg" xmlns:svg="http://www.w3.org/2000/svg">
  <!-- Created with SVG-edit - http://svg-edit.googlecode.com/ -->
  <g>
   <title>Layer 1</title>
-  <circle id="topcircle" stroke="red" id="svg_1" cx="352.5357" cy="343.05359" r="319.84973" stroke-width="5" fill="red"/>
-  
-  <rect id="toprect" stroke="green" id="svg_2" x="284.07143" y="210.39287" width="141" height="225"  
-  	stroke-linecap="null" stroke-linejoin="null" stroke-dasharray="null" stroke-width="5" fill="green"/>
-  	
-  <circle id="bottomcircle" stroke="red" cx="352.80358" cy="1046.27788" r="319.84973" stroke-width="5" fill="red"/>
-  
-  <rect id="bottomrect" stroke="green" x="281.13819" y="952.87559" width="141" height="225" 
-  	stroke-linecap="null" stroke-linejoin="null" stroke-dasharray="null" stroke-width="5" fill="green"/>
+  <rect id="topredballs" stroke="red" height="600" width="586" y="740" x="60" stroke-width="5" fill="red"/>
+  <rect id="topgreenstrikes" stroke="green" fill="green" stroke-width="5" x="255" y="915" width="176" height="265" />
+  <rect id="botredballs" stroke="red" height="600" width="586" y="60" x="60" stroke-width="5" fill="red"/>
+  <rect id="botgreenstrikes" stroke="green" fill="green" stroke-width="5" x="255" y="210" width="181" height="285"/>
  </g>
 </svg>
+
 </body>
 </html>
