--- a/strikezone.html
+++ b/strikezone.html
@@ -7,10 +7,16 @@
 #body {
 	background-color: lightgreen;
 }
+#strikestop, #strikesbot, #ballstop, #ballsbot {
+font-size: 30px;
+}
+
 </style>
 </head>
 <body id="body">
-<h1>help</h1>
+<input size="3" type="text" id='strikestop' value="0">
+<input size="3" type="text" id="ballstop" value="0">
+		<br>
 	<svg width="700" height="1400" xmlns="http://www.w3.org/2000/svg" xmlns:svg="http://www.w3.org/2000/svg">
  <!-- Created with SVG-edit - http://svg-edit.googlecode.com/ -->
  <g>
@@ -21,6 +27,8 @@
   <rect id="botgreenstrikes" stroke="green" fill="green" stroke-width="5" x="255" y="210" width="181" height="285"/>
  </g>
 </svg>
-
+<br>
+<input size="3" type="text" id='strikesbot' value="0">
+<input size="3" type="text" id="ballsbot" value="0">
 </body>
 </html>
