--- a/strikezone.html
+++ b/strikezone.html
@@ -15,6 +15,10 @@ background-color: lightyellow;
  font-size: 40px;
  background-color: yellow;
  }
+ #newpitcherbuttontop, #newpitcherbuttonbot {
+ font-size: 40px;
+ background-color: lightblue;
+ }
 
 </style>
 </head>
@@ -22,9 +26,9 @@ background-color: lightyellow;
 <input size="3" type="text" id='strikestop' value="0">
 <input size="3" type="text" id="ballstop" value="0">
 <input size="3" type="text" id="totaltop" value="0">
+<button onclick="zero4newpitchertop();" id="newpitcherbuttontop">NEW PITCHER</button>
 		<br>
 	<svg width="700" height="1400" xmlns="http://www.w3.org/2000/svg" xmlns:svg="http://www.w3.org/2000/svg">
- <!-- Created with SVG-edit - http://svg-edit.googlecode.com/ -->
  <g>
   <title>Layer 1</title>
   <rect id="topredballs" height="600" width="586" y="740" x="60" fill="red"/>
@@ -37,5 +41,8 @@ background-color: lightyellow;
 <input size="3" type="text" id='strikesbot' value="0">
 <input size="3" type="text" id="ballsbot" value="0">
 <input size="3" type="text" id="totalbot" value="0">
+<button onclick="zero4newpitcherbot();" id="newpitcherbuttonbot">NEW PITCHER</button>
+
+
 </body>
 </html>
