--- a/strikezone.html
+++ b/strikezone.html
@@ -23,6 +23,7 @@ background-color: lightyellow;
 </style>
 </head>
 <body id="body">
+<h1>TOP</h1>
 <input size="2" type="text" id='strikestop' value="0">
 <input size="2" type="text" id="ballstop" value="0">
 <input size="2" type="text" id="totaltop" value="0">
@@ -91,6 +92,7 @@ function zero4newpitcherbot() {
 	
 }
 </script>
-
+<br><br><br>
+<h1>BOTTOM</h1>
 </body>
 </html>
